# conf-finder

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
src/conf_finder/: __init__.py  conf_finder.py
tests/: test_conf_finder.py  test_version.py
